Updated jwt filter to get access of companyId, userId, role in app